@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.57 2003/07/17 21:29:58 grant Exp $
+# $NetBSD: Makefile,v 1.58 2003/07/20 14:21:52 abs Exp $
 #
 
-DISTNAME=	cpuflags-0.54
+DISTNAME=	cpuflags-0.55
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
