@@ -1,4 +1,4 @@
-# $Id: optimize_gcc.mk,v 1.11 2003/07/10 11:52:03 abs Exp $
+# $Id: optimize_gcc.mk,v 1.12 2003/07/20 14:21:52 abs Exp $
 
 # This file is 'experimental' - which is doublespeak for unspeakably
 # ugly, and probably quite broken by design.
@@ -30,12 +30,17 @@ PKGBASE=${.CURDIR:C:.*/::}
 COPT_FLAGS+=-ffast-math -fomit-frame-pointer
 
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=galeon lua4 mozilla phoenix
+PKG_EXCLUDE_INLINE_FUNCTIONS+=userppp
 .if !defined(USE_GCC3)
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=qt3-libs kdeedu3
 .endif
 
 .if !empty(PKG_EXCLUDE_OMIT_FRAME_POINTER:M${PKGBASE})
 COPT_FLAGS:=    ${COPT_FLAGS:S/-fomit-frame-pointer//}
+.endif
+
+.if !empty(PKG_EXCLUDE_INLINE_FUNCTIONS:M${PKGBASE})
+COPT_FLAGS:=    ${COPT_FLAGS:S/-finline-functions//}
 .endif
 
 CFLAGS+=${COPT_FLAGS}
