@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2838 2003/07/20 11:56:30 tron Exp $
+$NetBSD: CHANGES,v 1.2839 2003/07/20 14:22:50 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2872,3 +2872,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated wine to 20030709nb1 [wiz 2003-07-19]
 	Updated xtu to 1.2 [martin 2003-07-20]
 	Updated bidwatcher to 1.3.10 [tron 2003-07-20]
+	Updated cpuflags to 0.55 [abs 2003-07-20]
